<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VGO Driver</string>
    <string name="sign_in">登录</string>
    <string name="sign_out">退出登录</string>
    <string name="regist">注册</string>
    <string name="sign_in_with_account">普通登录</string>
    <string name="sign_in_with_code">手机动态登录</string>
    <string name="verificationv_code">验证码</string>
    <string name="password_found">找回密码</string>
    <string name="password_reset">重置密码</string>
    <string name="password_edit">修改密码</string>
    <string name="menu_home_text">订单任务</string>
    <string name="menu_order_text">订单</string>
    <string name="menu_my_text">我的</string>
    <string name="order_detail">订单详情</string>
    <string name="order_state_all">全部</string>
    <string name="order_state_cancle">已取消</string>
    <string name="order_state_unanswewd">待抢单</string>
    <string name="order_state_unpickup">待取货</string>
    <string name="order_state_on_the_way">配送中</string>
    <string name="order_state_unevaluate">待评价</string>
    <string name="order_state_complete">已完成</string>

    <string name="btn_sign_out">退出登录</string>
    <string name="btn_save">保存</string>
    <string name="btn_next">下一步</string>
    <string name="btn_get_verificationv_code">获取验证码</string>
    <string name="btn_regist_and_sign_in">注册，并立即登录</string>
    <string name="btn_vertify_right_now">立即验证</string>
    <string name="btn_order_publish">发布订单</string>
    <string name="btn_order_call_consignor">联系商家</string>
    <string name="btn_order_call_user">联系收货人</string>
    <string name="btn_order_publish_cancel">清空信息</string>
    <string name="btn_order_list_grap">抢单</string>
    <string name="btn_order_list_publish_grap">立即抢单</string>
    <string name="btn_order_list_view_detail">查看详情</string>
    <string name="btn_msg_dialog_cancle">关闭</string>
    <string name="btn_msg_dialog_cancle_sure">确认</string>
    <string name="btn_pickup">确认取货</string>
    <string name="btn_onclick_complete">确认完成</string>
    <!--<string name="btn_msg_dialog_cancle_sure">确认</string>-->

    <string name="hint_phone_num">手机号</string>
    <string name="hint_password">密码</string>
    <string name="hint_password2">确认密码</string>
    <string name="hint_old_password">原始密码</string>
    <string name="hint_new_password">新密码</string>
    <string name="hint_input_username">请输入姓名</string>
    <string name="hint_input_shopname">请输入店铺名称</string>
    <string name="hint_input_zipcode">请输入邮政编码</string>
    <string name="hint_input_address">请输入详细地址</string>
    <string name="hint_input_email">请输入email</string>
    <string name="hint_input_check_account">请输入支票账户</string>
    <string name="hint_input_routing_num">请输入 Routing Number</string>
    <string name="hint_input_tax_num">请输入税号</string>
    <string name="hint_input_paypal_account">请输入结算paypal账号</string>
    <string name="hint_input_referee_name">请输入推荐人姓名(选填)</string>
    <string name="hint_input_referee_tel">请输入推荐人电话(选填)</string>

    <string name="hint_input_consignor_phone">请输入发货人电话</string>
    <string name="hint_input_consignor_name">请输入发货人姓名</string>
    <string name="hint_input_consignor_zipCode">请输入发货人邮政编码</string>
    <string name="hint_input_consignor_address">请输入发货人详细街道楼牌号地址</string>

    <string name="hint_input_recipient_phone">请输入收货人电话</string>
    <string name="hint_input_recipient_name">请输入收货人姓名</string>
    <string name="hint_input_recipient_zipCode">请输入收货人邮政编码</string>
    <string name="hint_input_recipient_address">请输入收货人详细街道楼牌号地址</string>
    <string name="hint_input_order_desc">请输入配送清单信息</string>
    <string name="hint_input_order_amount">请输入订单金额</string>
    <string name="hint_input_postage_fee">配送费根据地址自动计算</string>
    <string name="hint_input_postage_tip">特殊物流加收配送费（选填）</string>
    <string name="hint_input_remark">备注信息</string>

    <string name="msg_agreement_value">&#160;&#160;已同意</string>
    <string name="msg_agreement_name">&#160;&#171;配送品台用户协议&#187;</string>
    <string name="msg_vertify_your_account">验证您的账号</string>
    <string name="msg_commit_successful">提交成功</string>
    <string name="msg_option_successful">操作成功</string>
    <string name="msg_vertify_account_success">已找到该账号，稍后将收到短信验证码，谨防泄漏！</string>
    <string name="msg_location_provider_disable">请开启GPS,以确保您的位置实时更新！</string>
    <string name="msg_dialog_grap_tip">确认抢单吗？</string>

    <string name="txt_order_state">订单状态：</string>
    <string name="txt_order_list_id">订单编号：</string>
    <string name="txt_order_list_name">店铺名称：</string>
    <string name="txt_order_list_address">取货地址：</string>
    <string name="txt_order_list_post_fee">配送费用：</string>
    <string name="txt_distribution_information">配送信息</string>
    <string name="txt_my_balance">我的余额</string>
    <string name="txt_balance_of_payments">收支明细</string>
    <string name="txt_user_shop_manage">店铺管理</string>
    <string name="txt_user_shop_header_img">店铺头像</string>
    <string name="txt_user_shop_name">店铺名称</string>
    <string name="txt_user_shop_name_edit">编辑店铺名称</string>
    <string name="txt_user_name_edit">编辑用户名称</string>
    <string name="txt_user_account_num_edit">修改账户</string>
    <string name="txt_user_name">姓名</string>
    <string name="txt_user_accunt_manage">账号管理</string>
    <string name="txt_user_sccount_info">账号信息</string>
    <string name="txt_user_financial_manage">财务管理</string>
    <string name="txt_user_more">更多</string>
    <string name="txt_more_agreement">平台协议</string>
    <string name="txt_more_about_me">关于我们</string>
    <string name="txt_more_hotline">服务热线</string>

    <string name="txt_order_shope_name">店铺名称:</string>
    <string name="txt_order_pike_address">取货地址:</string>
    <string name="txt_order_fee">订单金额:</string>
    <string name="txt_order_receiver">收货人:</string>
    <string name="txt_order_receiver_tel">联系方式:</string>
    <string name="txt_order_receiver_address">收货地址:</string>
    <string name="txt_order_driver_fee">配送费用:</string>
    <string name="txt_order_driver_name">配送人员:</string>
    <string name="txt_order_estimate_pike_time">预计取货时间:</string>
    <string name="txt_order_pike_time">取货时间:</string>
    <string name="txt_order_estimate_arrive_time">预计送达时间:</string>
    <string name="txt_order_arrive_time">送达时间:</string>
    <string name="txt_order_pay_type">支付方式:</string>
    <string name="txt_order_pay_with_cash">现金:</string>
    <string name="txt_order_pay_with_pos">刷卡:</string>
    <string name="txt_order_unpay">未支付:</string>
    <string name="txt_order_note">备注信息:</string>
    <string name="txt_order_evaluate">星级评价:</string>
    <string name="txt_order_overall_score">综合评分</string>

    <string name="error_vertify_vercode">短信验证码无效</string>
    <string name="error_user_tocken">登录信息失效，请重新登录！</string>
    <string name="error_service">服务器错误</string>
    <string name="error_account_not_exsit">账户不存在</string>
    <string name="error_user_password">密码错误</string>
    <string name="error_user_applying">尚未通过审核</string>
    <string name="error_referee_not_exist">推荐人不存在</string>
    <string name="error_account_already_exist">该手机号已被注册</string>
    <string name="error_format_mobile">手机号格式不正确</string>
    <string name="error_empty_mobile">请输入手机号</string>
    <string name="error_empty_password">请输入密码</string>
    <string name="error_empty_old_password">请输入原始密码</string>
    <string name="error_empty_new_password">请输入新密码</string>
    <string name="error_empty_password2">请输入确认密码</string>
    <string name="error_empty_paypal_account">请输入结算paypal账号</string>
    <string name="error_ensure_password">两次输入的密码不一致</string>
    <string name="error_empty_verCode">请输入收到的短信验证码</string>
    <string name="error_faild_verCode">短信验证码错误</string>
    <string name="language_zh">简体中文</string>
    <string name="language_en_rUs">English</string>
    <string name="language_es_rUs">Español</string>

    <string name="txt_select_language">请选择您所需要的语种</string>
    <string name="setting_language">设置语言</string>
    <string name="txt_user_service_scope">服务范围</string>
    <string name="txt_user_service_scope_min">接收服务人员的最低等级</string>
    <string name="txt_user_score">信用星级</string>
    <string name="txt_my_score">我的星级</string>
    <string name="txt_my_score_record">历史评价</string>
    <string name="txt_account_num">支票账户：</string>
    <string name="txt_routing_num">汇款路径账户：</string>
    <string name="txt_navigation">一键导航</string>

    <string name="txt_user_bills_order_num">订单编号：</string>
    <string name="txt_user_bills_cosume_fee">消费金额：</string>
    <string name="txt_user_bills_drive_fee">配送费用：</string>
    <string name="txt_user_bills_service_fee">手续费用：</string>
    <string name="txt_user_bills_real_income">实际收入：</string>
    <string name="txt_user_bills_recommend_date">推荐日期：</string>
    <string name="txt_user_bills_recommend_reward">推荐奖励：</string>
    <string name="txt_user_bills_withdraw_cash_date">提现日期：</string>
    <string name="txt_user_bills_withdraw_cash_amount">提现金额：</string>
    <string name="txt_user_bills_rechange_date">充值日期：</string>
    <string name="txt_user_bills_rechange_amount">充值金额：</string>
    <string name="txt_user_bills_balance_balance">待结算金额：</string>
    <string name="txt_user_bills_present_balance">可提现金额：</string>

</resources>