<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f6f6f6">
        <com.lanhi.vgo.driver.weight.titlebar.Titlebar
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:showLeftBack="true"
            app:title="@string/setting_language"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_select_language"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/rb_language_zh"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:drawableRight="@drawable/selector_language_changed_img"
            android:background="@drawable/shap_tiled_bg"
            android:layout_marginTop="20dp"
            android:onClick="onSelectZH"
            android:text="@string/language_zh"/>

        <TextView
            android:id="@+id/rb_language_en"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:drawableRight="@drawable/selector_language_changed_img"
            android:background="@drawable/shap_tiled_bg"
            android:layout_marginTop="5dp"
            android:onClick="onSelectEN"
            android:text="@string/language_en_rUs"/>

        <TextView
            android:id="@+id/rb_language_es"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:drawableRight="@drawable/selector_language_changed_img"
            android:background="@drawable/shap_tiled_bg"
            android:layout_marginTop="5dp"
            android:onClick="onSelectES"
            android:text="@string/language_es_rUs"/>
        <RelativeLayout
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:onClick="sure"
            android:layout_marginTop="30dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:src="@drawable/button"
                android:scaleType="centerInside"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/color_white"
                android:textSize="18dp"
                android:text="OK"/>
        </RelativeLayout>
    </LinearLayout>
</layout>
