<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="event"
            type="com.lanhi.vgo.driver.common.OnEventListener"/>
        <variable
            name="data"
            type="com.lanhi.vgo.driver.mvvm.model.UserData"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.lanhi.vgo.driver.weight.titlebar.Titlebar
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:showLeftBack="true"
            app:title="@string/txt_user_account_num_edit"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shap_tiled_bg"
            android:hint="@string/hint_input_check_account"
            android:textColorHint="@color/color_hint"
            android:layout_toRightOf="@+id/tv_shop_name"
            android:layout_centerVertical="true"
            android:layout_marginTop="30dp"
            android:paddingLeft="8dp"
            android:inputType="text"
            android:text="@={data.checkNum}"
            android:textSize="16dp"
            android:textColor="@color/color_text"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shap_tiled_bg"
            android:hint="@string/hint_input_routing_num"
            android:textColorHint="@color/color_hint"
            android:layout_toRightOf="@+id/tv_shop_name"
            android:layout_centerVertical="true"
            android:paddingLeft="8dp"
            android:inputType="text"
            android:text="@={data.routingNum}"
            android:textSize="16dp"
            android:textColor="@color/color_text"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:onClick="@{(v)->event.userAccountNumEdit(v,data.checkNum,data.routingNum)}"
            android:layout_marginTop="40dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:src="@drawable/button"
                android:scaleType="centerInside"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/color_white"
                android:textSize="18dp"
                android:text="@string/btn_save"/>
        </RelativeLayout>
    </LinearLayout>

</layout>