<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="event"
            type="com.lanhi.vgo.driver.common.OnEventListener"/>
        <variable
            name="data"
            type="com.lanhi.vgo.driver.mvvm.model.UserData"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.lanhi.vgo.driver.weight.titlebar.Titlebar
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:showLeftBack="true"
            app:title="@string/txt_user_shop_name_edit"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#f2f2f2"
            android:gravity="center_vertical"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="40dp"
            android:onClick="@{event::viewUserShop}"
            android:background="@drawable/shap_tiled_bg">
            <TextView
                android:id="@+id/tv_shop_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/txt_user_shop_name"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:hint="@string/hint_input_shopname"
                android:textColorHint="@color/color_hint"
                android:layout_toRightOf="@+id/tv_shop_name"
                android:layout_centerVertical="true"
                android:paddingLeft="8dp"
                android:inputType="text"
                android:text="@={data.shopName}"
                android:textSize="16dp"
                android:textColor="@color/color_text"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:onClick="@{(v)->event.shopNameEdit(v,data.shopName)}"
            android:layout_marginTop="40dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:src="@drawable/button"
                android:scaleType="centerInside"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/color_white"
                android:textSize="18dp"
                android:text="@string/btn_save"/>
        </RelativeLayout>
    </LinearLayout>

</layout>