<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">
    <data>
        <import type="com.lanhi.vgo.driver.mvvm.model.StateCityData"/>
        <variable
            name="data"
            type="com.lanhi.vgo.driver.mvvm.model.UserData"/>
        <variable
            name="titleBarOptions"
            type="com.lanhi.vgo.driver.weight.titlebar.TitleBarOptions"/>
        <variable
            name="listener"
            type="com.lanhi.vgo.driver.common.OnEventListener"/>
        <variable
            name="stateCityViewModel"
            type="com.lanhi.vgo.driver.mvvm.viewmodel.StateCityViewModel"/>
        <variable
            name="stateAdapter"
            type="com.lanhi.vgo.driver.adapter.StateCityAdapter"/>
        <variable
            name="cityAdapter"
            type="com.lanhi.vgo.driver.adapter.StateCityAdapter"/>
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f2f2f2">
        <com.lanhi.vgo.driver.weight.titlebar.Titlebar
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/regist"
            app:showLeftBack="true"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shap_tiled_bg"
                    android:hint="@string/hint_input_username"
                    android:textColorHint="@color/color_hint"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_marginTop="2dp"
                    android:inputType="text"
                    android:text="@={data.userName}"
                    android:textSize="16dp"
                    android:textColor="@color/color_text"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shap_tiled_bg"
                    android:hint="@string/hint_input_shopname"
                    android:textColorHint="@color/color_hint"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_marginTop="2dp"
                    android:singleLine="true"
                    android:textSize="16dp"
                    android:inputType="text"
                    android:text="@={data.shopName}"
                    android:textColor="@color/color_text"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shap_tiled_bg"
                    android:hint="@string/hint_input_zipcode"
                    android:textColorHint="@color/color_hint"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_marginTop="2dp"
                    android:singleLine="true"
                    android:textSize="16dp"
                    android:inputType="number"
                    android:onTextChanged="@{stateCityViewModel::onEditTextChanged}"
                    android:text="@={data.zipCode}"
                    android:textColor="@color/color_text"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shap_tiled_bg"
                    android:hint="@string/hint_input_address"
                    android:textColorHint="@color/color_hint"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_marginTop="2dp"
                    android:singleLine="true"
                    android:textSize="16dp"
                    android:inputType="text"
                    android:text="@={data.address}"
                    android:textColor="@color/color_text"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="2dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/shap_tiled_bg_left"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1">
                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:scaleType="centerInside"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/icon_duihao"/>
                        <android.support.v7.widget.AppCompatSpinner
                            android:id="@+id/spiner_state"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            bind:selectedPlanet="@={stateCityViewModel.observableSelectedState}"
                            app:adapter="@{stateAdapter}"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/shap_tiled_bg_right"
                        android:layout_marginLeft="1dp"
                        android:layout_weight="1">
                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:scaleType="centerInside"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/icon_duihao"/>
                        <android.support.v7.widget.AppCompatSpinner
                            android:id="@+id/city_spiner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            bind:selectedPlanet="@={stateCityViewModel.observableSelectedCity}"
                            app:adapter="@{cityAdapter}"/>
                    </RelativeLayout>
                </LinearLayout>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shap_tiled_bg"
                    android:hint="@string/hint_input_email"
                    android:textColorHint="@color/color_hint"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_marginTop="2dp"
                    android:singleLine="true"
                    android:textSize="16dp"
                    android:inputType="textEmailAddress"
                    android:text="@={data.email}"
                    android:textColor="@color/color_text"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shap_tiled_bg"
                    android:hint="@string/hint_input_check_account"
                    android:textColorHint="@color/color_hint"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_marginTop="2dp"
                    android:singleLine="true"
                    android:textSize="16dp"
                    android:inputType="number"
                    android:text="@={data.checkNum}"
                    android:textColor="@color/color_text"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shap_tiled_bg"
                    android:hint="@string/hint_input_routing_num"
                    android:textColorHint="@color/color_hint"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_marginTop="2dp"
                    android:singleLine="true"
                    android:textSize="16dp"
                    android:inputType="number"
                    android:text="@={data.routingNum}"
                    android:textColor="@color/color_text"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shap_tiled_bg"
                    android:hint="@string/hint_input_tax_num"
                    android:textColorHint="@color/color_hint"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_marginTop="2dp"
                    android:singleLine="true"
                    android:textSize="16dp"
                    android:inputType="text"
                    android:text="@={data.taxNum}"
                    android:textColor="@color/color_text"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shap_tiled_bg"
                    android:hint="@string/hint_input_referee_name"
                    android:textColorHint="@color/color_hint"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_marginTop="2dp"
                    android:singleLine="true"
                    android:textSize="16dp"
                    android:inputType="text"
                    android:text="@={data.refereeName}"
                    android:textColor="@color/color_text"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shap_tiled_bg"
                    android:hint="@string/hint_input_referee_tel"
                    android:textColorHint="@color/color_hint"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_marginTop="2dp"
                    android:singleLine="true"
                    android:textSize="16dp"
                    android:inputType="text"
                    android:text="@={data.refereeTel}"
                    android:textColor="@color/color_text"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:onClick="@{listener::regist}"
                    android:layout_marginTop="25dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:src="@drawable/button"
                        android:scaleType="centerInside"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/color_white"
                        android:textSize="18dp"
                        android:text="@string/btn_regist_and_sign_in"/>
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="25dp">
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/check_agreenmentt_selector_img"
                        android:button="@null"
                        android:checked="true"
                        android:text="@string/msg_agreement_value"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/msg_agreement_name"
                        android:textColor="#ff7e61"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
